--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>outrank.xyz</title>
+    <!-- Apply saved theme before CSS loads to prevent flash -->
+    <script>
+      document.documentElement.setAttribute(
+        'data-theme',
+        localStorage.getItem('theme') || 'dark'
+      )
+    </script>
   </head>
   <body>
     <div id="root"></div>
